--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <!--[if lt IE 9]>
     <script src="js/html5shiv.js"></script>
     <![endif]-->
-    <script src="js/main.min.js" async></script>
+    <script src="js/main.min.js" defer></script>
     <!-- Yandex.Metrika counter --><!-- /Yandex.Metrika counter -->
     <!-- Google Analytics counter --><!-- /Google Analytics counter -->
 </head>
