--- a/index.html
+++ b/index.html
@@ -35,7 +35,10 @@
         <li><a href="">галерея "комочков"</a></li>
         <li><a href="">пушистая "команда"</a></li>
         <li><a href="">контакты</a></li>
-        <div class="index-menu"><i class="fa fa-bars" aria-hidden="true"></i></div>
+        <div class="index-menu">
+            <i class="fa fa-bars icon open" aria-hidden="true"></i>
+            <i class="fa fa-times icon" aria-hidden="true"></i>
+        </div>
     </ul>
 </div>
 <header>
