- удаленны стороние библиотеки jquery и основанные на них - использованны скрипты только на чистом js - добавленны ховер эффекты в меню - обновленны файлы в папки img

--- a/index.html
+++ b/index.html
@@ -30,11 +30,12 @@
 <div class="back-menu">
     <div class="line-menu"></div>
     <ul>
-        <li><a href="">о нас</a></li>
-        <li><a href="">инкубатор</a></li>
-        <li><a href="">галерея "комочков"</a></li>
-        <li><a href="">пушистая "команда"</a></li>
-        <li><a href="">контакты</a></li>
+        <li><a href="#home">Гавная</a></li>
+        <li><a href="#aboutus">о нас</a></li>
+        <li><a href="#incubator">инкубатор</a></li>
+        <li><a href="#gallery">галерея "комочков"</a></li>
+        <li><a href="#team">пушистая "команда"</a></li>
+        <li><a href="#contacts">контакты</a></li>
         <div class="index-menu">
             <i class="fa fa-bars icon open" aria-hidden="true"></i>
             <i class="fa fa-times icon" aria-hidden="true"></i>
@@ -42,7 +43,7 @@
     </ul>
 </div>
 <header>
-    <div class="container">
+    <div id="home" class="container">
         <div class="row">
             <div class="wrapper-internal logo col-12">
                 <h1><img class="left-logo-img hidden-xs" src="img/test1.png" alt=""><span>AbrikoS</span><img class="right-logo-img hidden-xs" src="img/test2.png" alt=""></h1><br/><span>арт студия Вашего счастья</span>
@@ -58,7 +59,7 @@
     </div>
 </header>
 <article>
-    <div class="container">
+    <div id="aboutus" class="container">
         <div class="row">
             <div class="wrapper-internal">
                 <h2 class="col-12">немного о нас</h2>
@@ -72,7 +73,7 @@
                     <div><img src="img/spitz.gif" alt=""></div></div>
             </div>
         </div>
-        <div class="row">
+        <div id="incubator" class="row">
             <h2 class="">наш инкубатор</h2>
             <div class="incubator">
                <div class="blind"></div>
@@ -87,7 +88,7 @@
                 </div>
             </div>
         </div>
-        <div class="row">
+        <div id="gallery" class="row">
             <h2>галерея комочков</h2>
             <div class="wrapper-internal gallery">
                 <div class="container-items">
@@ -137,7 +138,7 @@
                 </div>
             </div>
         </div>
-        <div class="row">
+        <div id="team" class="row">
             <h2>пушистая команда</h2>
             <div class="fon">
                 <div class="blind"></div>
@@ -152,14 +153,14 @@
                                 Шелдона дискретное (цифровое) мышление. </p>
                         </div></div>
                         <div class="col-md-3 col-sm-3 hidden-xs"><div class="comands-img">
-                            <img src="img/ursula-min.png" class="img-responsive" alt="">
+                            <img src="img/team.png" class="img-responsive" alt="">
                         </div></div>
                     </div>
                 </div>
                 <div class="col-lg-12">
                     <div class="row">
                         <div class="col-md-3 col-sm-3 hidden-xs"><div class="comands-img">
-                            <img src="img/ursula-min.png" class="img-responsive" alt="">
+                            <img src="img/team2.png" class="img-responsive" alt="">
                         </div></div>
                         <div class="col-md-9 col-sm-9 col-xs-12"><div class="comands-text">
                             <p>Урсула</p>
@@ -173,7 +174,7 @@
             </div>
             </div>
         </div>
-        <div class="row">
+        <div id="contacts" class="row">
             <h2>контакты</h2>
             <div class="wrapper-internal contacts">
                 <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
