- исправлены popap-окна для картинок галерии - исправленны бордеры для кнопок формы - добавлен контент - настроена минификация пользовательских стилей

--- a/index.html
+++ b/index.html
@@ -80,6 +80,7 @@
                 <div class="wrapper-internal count-time">
                     <div class="col-lg-12">
                         <p>Наш инкубатор "разжился" тремя комочками :) Мы растем!</p>
+                        <h3>Нам</h3>
                         <div class="time-wrapper">
 
                         </div>
@@ -146,7 +147,7 @@
                 <div class="col-lg-12">
                     <div class="row">
                         <div class="col-md-9 col-sm-9 col-xs-12"><div class="comands-text">
-                            <p>Шелдон</p>
+                            <p>Шелдон <span>мальчик, 1.5 года</span></p>
                             <p>Личность Шелдона настолько необычна, что он стал одним из самых популярных телевизионных
                                 персонажей. Гениальный учёный, с ранних лет поглощённый занятием физикой, в
                                 своём развитии он не получил достаточных социальных навыков. У расчётливого и циничного
@@ -163,7 +164,7 @@
                             <img src="img/team2.png" class="img-responsive" alt="">
                         </div></div>
                         <div class="col-md-9 col-sm-9 col-xs-12"><div class="comands-text">
-                            <p>Урсула</p>
+                            <p>Урсула <span>девочка, 1 год</span></p>
                             <p>Ле Гуин отличается от других писателей-фантастов прежде всего более гуманитарным уклоном,
                                 акцентом на социологию и антропологию. Это особенно заметно в научно-фантастических
                                 книгах так называемого Хайнского цикла, объединённых темой культурного взаимодействия
