--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="description" content=""/>
     <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <link rel="shortcut icon" href="favicon.png"/>
+    <link rel="shortcut icon" href="favicon.ico"/>
     <link rel="stylesheet" href="css/libs.min.css">
     <link rel="stylesheet" href="css/main.css">
     <!--[if lt IE 9]>
