- fix validation W3 error

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="ru">
 <head>
     <meta charset="UTF-8">
     <title>AbrikoS</title>
@@ -7,8 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <link rel="shortcut icon" href="favicon.ico"/>
-    <link rel="stylesheet" href="css/libs.min.css">
-    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/main.min.css">
     <!--[if lt IE 9]>
     <script src="js/html5shiv.js"></script>
     <![endif]-->
@@ -36,11 +35,11 @@
         <li><a href="#gallery">галерея "комочков"</a></li>
         <li><a href="#team">пушистая "команда"</a></li>
         <li><a href="#contacts">контакты</a></li>
-        <div class="index-menu">
-            <i class="fa fa-bars icon open" aria-hidden="true"></i>
-            <i class="fa fa-times icon" aria-hidden="true"></i>
-        </div>
     </ul>
+    <div class="index-menu">
+        <i class="fa fa-bars icon open" aria-hidden="true"></i>
+        <i class="fa fa-times icon" aria-hidden="true"></i>
+    </div>
 </div>
 <header>
     <div id="home" class="container">
@@ -185,11 +184,11 @@
                     <div><span><i class="fa fa-skype" aria-hidden="true"></i></span><p>abrikosa</p></div>
                 </div>
                 <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
-                    <form action="" name="user_form">
+                    <form action="#" name="user_form">
                         <label for="user_name">Ваше имя:</label><input type="text" name="user_name" id="user_name" placeholder="" required/>
                         <label for="user_email">Ваш e-Mail:</label><input type="email" name="user_email" id="user_email" placeholder="" required/>
                         <label for="user_tel">Ваш телефон:</label><input type="tel" name="user_tel" id="user_tel" placeholder="" required/>
-                        <label for="user_text">Tекст сообщения:</label><textarea name="" id="user_text" cols="30" rows="3" placeholder="" required></textarea>
+                        <label for="user_text">Tекст сообщения:</label><textarea name="user_text" id="user_text" cols="30" rows="3" placeholder="" required></textarea>
                         <button type="submit">send</button>
                         <button type="reset">reset</button>
                     </form>
